Mon Apr 15 13:59:55 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * ace/Log_Record.inl:

          Fixed ACE_TRACE macro to match actual method name.

Fri Apr 12 19:49:50 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp:
        * ace/Dev_Poll_Reactor.h: Take advantage of the thread-safe behavior
          of epoll_ctl/epoll_wait and allow changes to the wait set to be made
          without interrupting the waiting leader thread. To make timers and
          notifies more predictable, still allow only one thread to wait for
          events at a time, but allow registrations, removals, etc. to the
          wait set to be made by any thread. The "reactor token" now controls
          the leader/followers for event dispatching; a new repository token
          is added to synchronize access to the handler repository, independent
          of waiting for events.

Fri Apr 12 19:43:34 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.cpp:
        Fixed problem caused by pervious commit.

Fri Apr 12 19:30:05 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
        * ace/Log_Category.cpp:
        Fixed problem for ST build

        * tests/Log_Msg_Test.cpp:
        Fixed problem for WCHAR build

Thu Apr 11 19:53:22 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
        Fixed some documentation problems.

Thu Apr 11 19:42:14 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
        Fixed ACELIB_ERROR_RETURN()  control reaches end of non-void function warning.

        * tests/Log_Msg_Test.cpp:
        Added test for ACE_Log_Category

Thu Apr 11 17:54:55 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/ace_for_tao.mpc:
        Added missing file.

Thu Apr 11 15:45:41 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/ACE.cpp:
        * ace/ARGV.cpp:
        * ace/ATM_Acceptor.inl: